--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,9 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
 
+    implementation 'com.google.firebase:firebase-core:16.0.8'
+    implementation 'com.google.firebase:firebase-database:16.1.0'
+
     implementation 'com.jakewharton.threetenabp:threetenabp:1.2.0'
     testImplementation('org.threeten:threetenbp:1.3.8') {
         exclude module: 'com.jakewharton.threetenabp:threetenabp:1.2.0'
@@ -75,3 +78,5 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.2-alpha02'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha02'
 }
+
+apply plugin: 'com.google.gms.google-services'
