--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.8'
     implementation 'com.google.firebase:firebase-database:16.1.0'
 
+    implementation 'com.google.zxing:core:3.3.3'
+
     implementation 'com.jakewharton.threetenabp:threetenabp:1.2.0'
     testImplementation('org.threeten:threetenbp:1.3.8') {
         exclude module: 'com.jakewharton.threetenabp:threetenabp:1.2.0'
