--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,10 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-rxjava2:$room_version"
 
+    def glide_version = "4.9.0"
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    kapt "com.github.bumptech.glide:compiler:$glide_version"
+
     def retrofit_version = "2.5.0"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
@@ -63,6 +67,11 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-core:16.0.8'
     implementation 'com.google.firebase:firebase-database:16.1.0'
+
+    implementation 'com.google.firebase:firebase-auth:16.2.0'
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
+
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
 
     implementation 'com.google.zxing:core:3.3.3'
 
